[package]
name = "tokio-metrics"
version = "0.2.2"
edition = "2021"
rust-version = "1.56.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tokio-metrics"
homepage = "https://tokio.rs"
description = """
Runtime and task level metrics for Tokio applications.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["async", "futures", "metrics", "debugging"]

[features]
default = ["rt"]
rt = ["tokio"]

[dependencies]
tokio-stream = "0.1.11"
futures-util = "0.3.19"
pin-project-lite = "0.2.7"
tokio = { version = "1.31.0", features = ["rt", "stats", "time", "net"], optional = true }

[dev-dependencies]
axum = "0.6"
criterion = "0.3.4"
futures = "0.3.21"
num_cpus = "1.13.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.26.0", features = ["full", "rt", "time", "macros", "test-util"] }

[[example]]
name = "runtime"
required-features = ["rt"]

[[bench]]
name = "poll_overhead"
harness = false

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable"]
# it's necessary to _also_ pass `--cfg tokio_unstable` to rustc, or else
# dependencies will not be enabled, and the docs build will fail.
rustc-args = ["--cfg", "tokio_unstable"]