[package]
name = "tokio-metrics"
version = "0.4.6"
edition = "2021"
rust-version = "1.70.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tokio-metrics"
homepage = "https://tokio.rs"
description = """
Runtime and task level metrics for Tokio applications.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["async", "futures", "metrics", "debugging"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[features]
default = ["rt"]
metrics-rs-integration = ["dep:metrics"]
rt = ["tokio"]

[dependencies]
tokio-stream = "0.1.11"
futures-util = "0.3.19"
pin-project-lite = "0.2.7"
tokio = { version = "1.45.1", features = ["rt", "time", "net"], optional = true }
metrics = { version = "0.24", optional = true }

[dev-dependencies]
axum = "0.8"
criterion = "0.7"
futures = "0.3.21"
num_cpus = "1.13.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.45.1", features = ["full", "rt", "time", "macros", "test-util"] }
metrics-util = { version = "0.20", features = ["debugging"] }
metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.17", features = ["uds-listener"] }

[[example]]
name = "runtime"
required-features = ["rt"]

[[bench]]
name = "poll_overhead"
harness = false

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable"]
# it's necessary to _also_ pass `--cfg tokio_unstable` to rustc, or else
# dependencies will not be enabled, and the docs build will fail.
rustc-args = ["--cfg", "tokio_unstable"]
